# fusion-ukf

./: CMakeLists.txt  README.md
headers/: datapoint.h  fusionukf.h  measurementpredictor.h  settings.h  statepredictor.h  stateupdater.h  tools.h  usagecheck.h
src/: datapoint.cpp  fusionukf.cpp  main.cpp  measurementpredictor.cpp  statepredictor.cpp  stateupdater.cpp  tools.cpp  usagecheck.cpp
